[project]
name = "gn-module-monitoring-habitat-station"
description = "GeoNature module for monitoring habitats on a station."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["monitoring", "habitat", "station", "flora"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Conservatoire Botanique National Alpin", email = "geonature@cbn-alpin.fr"},
    {name = "Parcs nationaux des Écrins et des Cévennes", email = "geonature@ecrins-parcnational.fr"},
]
authors = [
    {name = "Amine HAMOUDA"},
    {name = "Cendrine HOARAU", email = "c.hoarau@cbn-alpin.fr"},
    {name = "Jean-Pascal MILCENT", email = "jp.milcent@cbn-alpin.fr"},
    {name = "Camille MONCHICOURT"},
    {name = "Nicolas ROUYER", email = "n.rouyer@cbn-alpin.fr"},
    {name = "Céline VIDAL", email = "celine_vidal@natural-solutions.eu"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
urls.homepage = "https://github.com/PnX-SI/gn_module_monitoring_habitat_station"
urls.documentation = "https://github.com/PnX-SI/gn_module_monitoring_habitat_station"
urls.repository = "https://github.com/PnX-SI/gn_module_monitoring_habitat_station"
dynamic = ["version"]
dependencies = [
    "pypnnomenclature",
    "pypnusershub>=1.5.9",
    "pypn_habref_api",
    "gn_conservation_backend_shared>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
]
prod = [
    "gn_conservation_backend_shared@git+https://github.com/cbn-alpin/gn_conservation_backend_shared.git@0.4.0",
]

[project.entry-points.gn_module]
code = "gn_module_monitoring_habitat_station:MODULE_CODE"
picto = "gn_module_monitoring_habitat_station:MODULE_PICTO"
blueprint = "gn_module_monitoring_habitat_station.blueprint:blueprint"
config_schema = "gn_module_monitoring_habitat_station.conf_schema_toml:GnModuleSchemaConf"
migrations = "gn_module_monitoring_habitat_station:migrations"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=60.0.0", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

#[tool.setuptools]
#packages = ["gn_module_monitoring_habitat_station"]
#package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["gn_module_monitoring_habitat_station*"]
namespaces = true

[tool.setuptools.package-data]
"gn_module_monitoring_habitat_station.migrations.data" = ["*.sql"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "backend",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 99
